More validator fixes, struggling with indentation within an unordered list.

--- a/index.html
+++ b/index.html
@@ -261,13 +261,10 @@
          <li>A letter or number may border either side of Ethiopic Wordspace.</li>
          <li>Ethiopic Wordspace may appear before, but not after, an opening punctuation, such as: ( , [ , { ,  « , ‹ , “ .</li>
          <li>Ethiopic Wordspace may appear after, but not before, an closing punctuation, such as: ) , ] , } , » , › , ” .<br/>
-<ul>
-<em>Example:</em><br/>
-<ul>
-Incorrect: … ፅፋት፡(ፅፍዓት፡)፡ከመ፡ኪደተ፡ንስር፡(እንደ፡አሞራ፡ፈጣን፡)።<br/>
-&nbsp;&nbsp;Correct: … ፅፋት፡(ፅፍዓት)፡ከመ፡ኪደተ፡ንስር፡(እንደ፡አሞራ፡ፈጣን)።<br/>
-</ul>
-</ul>
+
+&nbsp;&nbsp;&nbsp;&nbsp;<em>Example:</em><br/>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Incorrect: … ፅፋት፡(ፅፍዓት፡)፡ከመ፡ኪደተ፡ንስር፡(እንደ፡አሞራ፡ፈጣን፡)።<br/>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Correct: … ፅፋት፡(ፅፍዓት)፡ከመ፡ኪደተ፡ንስር፡(እንደ፡አሞራ፡ፈጣን)።<br/>
          </li>
          <li>No other punctuation may border Ethiopic Wordspace.</li>
          <li>A new line may follow, but not precede, an Ethiopic Wordspace (a wordspace may not start a new line).</li>
