--- a/index.html
+++ b/index.html
@@ -191,10 +191,11 @@
 
     <section id="baseline_alignment">
       <h4>Baseline Alignment</h4>
-      <p><em>This may only be an issue with pre-digital typesetting systems where Latin text and Ethiopic would appear to be
-            laid out on different baselines in a line of text.  The most common example of this appears in documents produced with a typewriter
-            where a sheet of paper had to be moved between typewriters to produce a line in two scripts.  An apparent baseline difference here
-            would be the result of mechanical misalignment.</em></p>
+      <p>It is not uncommon to observe mid-sentence baseline changes in interlingual documents produced with pre-digital typesetting systems
+         where Ethiopic and Latin text, for example, would appear to be laid out along different baselines in a line of text.  The most common
+         example of this appears in documents produced with a typewriter where a sheet of paper had to be moved between typewriters to produce
+         a line in two scripts.  An apparent baseline difference here would be the result of mechanical misalignment.</p>
+
        <p><em>The only point it seems to make here would be to state that Ethiopic and foreign scripts should share the same baseline.  This
               may already be the case with computer typography.  If so, this section should be removed.</em></p>
     </section>
@@ -217,7 +218,7 @@
   <h3>Punctuation</h3>
   <section id="ethiopic_punctuation">
     <h4>Punctuation used in Ethiopic</h4>
-    <p><em>[This section TBD.]</em></p>
+    <p><em>[TBD: Add a punctuation overview, include Timherte Slaq as a special case with rules different from Spanish usage.]</em></p>
   </section>
 
   <section id="ethiopic_comma_usage">
@@ -367,8 +368,6 @@
            <li>Are the above rules valid?</li>
          </ol>
         </div>
-        <p class="issues">[TBD: somewhere in this document mention the mouse text selection rule that a following wordspace should be automatically selected with text, analagous
-        to the rule applied to white space. MS Word does this.]</p>
     </section>
 
     <section id="space_wordspace_substitution_rules">
@@ -475,6 +474,7 @@
       <p><em>Regular rules apply?  One consideration for Ethiopic would be that a newline is not a dependable word boundary
           in the common case where words are split across lines without a hyphen symbol and white space is the default wordspace.
         Word boundaries are known here only by context.</em></p>
+        <p class="issues">Discuss the special case with wordspace sticking to a word leading to the mouse text selection rule that a following wordspace should be automatically selected with text, analagous to the rule applied to white space. MS Word does this.]</p>
     </section>
 
     <section id="ethiopic_wordspace_format">
@@ -493,7 +493,7 @@
           <li>Following an ellipsis (?).</li>
           <li>Within a block of embedded foreign script.</li>
         </ul>
-        <p><em>[image samples needed]</em></p>
+        <p><em>[TBD: Image samples needed]</em></p>
         <div class="issues">
         <p>Issues/Questions:</p>
           <ol>
@@ -572,7 +572,7 @@
       <section id="emphasis_within_prose">
     <h4>Emphasis Within Prose</h4>
     <p>Within a paragraph, a reference to a book title, or section title is given in italic. Words may also be emboldened to emphasize importance.</p>
-    <p>[Examples Needed]</p>
+    <p>[TBD: Examples Needed]</p>
     <div class="issues">
           <p>Issues/Questions:</p>
           <ol>
