Update to Letter Spacing.

--- a/index.html
+++ b/index.html
@@ -655,13 +655,20 @@
           <!-- An extreme example with 11 levels: በኢ/ኦ/ተ/ቤ/ክ/ሰ/ት/ቤ/ማ/መ/ማኅበረ ቅዱሳን  via http://eotcmk.org/site/component/contact/?task=view&contact_id=1 -->
   </section>
 
-  <section id="ligatures">
+  <section id="kerning_pairs_and_ligatures">
     <h3>Letter Spacing</h3>
-    <p>Any number of kerning pairs and ligatures are possible for Ethiopic typography that would lead to better 
-       visual quality of printed litterature. While beyond the present scope of this task force
-       raising the topic with stakeholders to gauge the level of interest would be beneficial
-       for setting the direction of future work. Producing visual samples (common lone words and full paragraphs)
-       would help in the discussion of this topic.</p>
+    <p>Any number of kerning pairs and ligatures are possible for Ethiopic typography that would lead to better visual quality of printed literature. While beyond the present scope of this task force, raising the topic with stakeholders to gauge the level of interest would be beneficial to help set the direction of future work.</p>
+    <p>An assumption here is that ligatures are only relevant to the reproduction of calligraphical manuscripts and not a requirement of modern literature.</p>
+
+    <p>[TBD: Provide an example of a kerning pair and ligature.]</p>
+
+    <div class="issues">
+      <p>Issues/Questions:</p>
+      <ol>
+        <li>Is defining kerning pairs of interest to your organization?</li>
+        <li>Is defining ligatures of interest to your organization?</li>
+      </ol>
+    </div>
   </section>
 
   </section>
