Commented out the "Discuss:" section under Characters & Phrases.

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
     <h2>Characters &amp; Phrases</h2>
     <section id="ethiopic_with_other_scripts">
     <h3>Interlingual Documents with Ethiopic</h3>
-    <p><em>Discuss any considerations for when foreign scripts (Latin, Arabic, etc) are used with Ethiopic text. Relative character heights and weights.</em></p>
+    <!-- Discuss: Any considerations for when foreign scripts (Latin, Arabic, etc) are used with Ethiopic text. Relative character heights and weights.-->
     <section id="relative_character_heights">
       <h4>Relative Character Heights</h4>
       <p>In multilingual documents, differences between the heights of letters in Ethiopic script and its companion foreign script are often found.
@@ -471,10 +471,10 @@
 
     <section id="ethiopic_word_boundaries">
       <h3>Word Boundaries</h3>
-      <p><em>Regular rules apply?  One consideration for Ethiopic would be that a newline is not a dependable word boundary
+      <p><em>Discuss: Do regular rules apply?  One consideration for Ethiopic would be that a newline is not a dependable word boundary
           in the common case where words are split across lines without a hyphen symbol and white space is the default wordspace.
         Word boundaries are known here only by context.</em></p>
-        <p class="issues">Discuss the special case with wordspace sticking to a word leading to the mouse text selection rule that a following wordspace should be automatically selected with text, analagous to the rule applied to white space. MS Word does this.]</p>
+        <p class="issues">Discuss: The special case with wordspace sticking to a word leading to the mouse text selection rule that a following wordspace should be automatically selected with text, analagous to the rule applied to white space. MS Word does this.]</p>
     </section>
 
     <section id="ethiopic_wordspace_format">
@@ -676,6 +676,8 @@
 
   <section id="lines_and_paragraphs">
     <h2>Lines &amp; Paragraphs</h2>
+    <!-- Discuss: Line composition rules, Punctuations, Mixed script text, Paragraph adjustment, Directionality and bidi, Tab setting, Alignment, Justification, Hyphenation, Word/Sentence boundaries, Special cases (e.g. poetry, math, vertical, etc.)  -->
+
      <section id="ethiopic_line_breaking">
        <h3>Line Breaking</h3>
        <p>Word processors and text readers such as web browsers, eBook devices, etc. will automatically format the sentences of a paragraph over a number of lines as allowable by the available width of the viewing area.  These software systems apply formatting rules that govern where how a line may end and a new line begin.  Line breaking rules for Ethiopic are expressed with rules for how a line may start. A line may start with:</p>
