Adding example images of kerning and ligatures.

--- a/index.html
+++ b/index.html
@@ -660,7 +660,13 @@
     <p>Any number of kerning pairs and ligatures are possible for Ethiopic typography that would lead to better visual quality of printed literature. While beyond the present scope of this task force, raising the topic with stakeholders to gauge the level of interest would be beneficial to help set the direction of future work.</p>
     <p>An assumption here is that ligatures are only relevant to the reproduction of calligraphical manuscripts and not a requirement of modern literature.</p>
 
-    <p>[TBD: Provide an example of a kerning pair and ligature.]</p>
+      <figure id="kerning_examples"> <img src="images/Kerning-Examples.png" alt=" " />
+        <figcaption>Examples of Common Words With and Without Kerning Applied</figcaption>
+      </figure>
+
+      <figure id="ligature_examples"> <img src="images/Ligature-Examples.png" alt=" " />
+        <figcaption>Examples of Common Ligatures found in Calligraphical Manuscripts</figcaption>
+      </figure>
 
     <div class="issues">
       <p>Issues/Questions:</p>
