--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
        complex rules of interaction with other punctuation as well as justification.  Ethiopic punctuation is often aligned with similar English
        punctuation though these associations must be understood as approximate.  Ethiopic fullstop and wordspace are highly regular in their application,
        others, particularly ፣, ፤, and ፥ will be consistently used within a document but their roles may change between authors or institutes.  Addressing
-       puncutation semantic is beyond the scope of this document, however Ethiopic comma is given special attention in the following section.
+       puncutation semantics is beyond the scope of this document, however Ethiopic comma is given special attention in the following section.
     </p>
   </section>
 
