--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       <p>The editor's draft of this document is being developed by the <a href="https://www.w3.org/International/groups/ethiopic-layout/">Ethiopic Layout Task Force</a>, part of the W3C <a href="https://www.w3.org/International/ig/">Internationalization Interest Group</a>. It is published by the <a href="https://www.w3.org/International/core/">Internationalization Working Group</a>. The end target for this document is a Working Group Note.</p>
       <div class="note">
         <p data-lang="en" style="font-weight: bold; font-size: 120%">Sending comments on this document</p>
-        <p data-lang="en">If you wish to make comments regarding this document, please raise them as <a href="https://github.com/w3c/elreq/issues" style="font-size: 120%;">github issues</a> <!--against the <a href="https://www.w3.org/TR/2015/WD-elreq-20150721/" style="font-size: 120%">latest dated version in /TR</a>-->. Only send comments by email if you are unable to raise issues on github (see links below).   All comments are welcome.</p>
+        <p data-lang="en">If you wish to make comments regarding this document, please raise them as <a href="https://github.com/w3c/elreq/issues" style="font-size: 120%;">github issues</a>. Only send comments by email if you are unable to raise issues on github (see links below).   All comments are welcome.</p>
         <p data-lang="en">To make it easier to track comments, please raise separate issues or emails for each comment, and point to the section you are commenting on&nbsp; using  a URL for the dated version of the document.</p>
       </div>
     </div>
@@ -216,7 +216,7 @@
   <section id="punctuation">
   <h3>Punctuation</h3>
   <section id="ethiopic_punctuation">
-    <h4>Punctuation used in Ethiopic</h4>
+    <h4>Punctuation Used in Ethiopic</h4>
     <p>In Classical era Ethiopic up to nine puncutation marks can be found. Though rarely, if ever, would all nine be found in a single document.
        The Classical Ethiopic punctuation inventory may <em>appear</em> to be larger in number as a result of bi-chromatic rendering which can be
        applied to any punctuation and in several different styles.  However, the bi-chromatic forms do not change the syntactic role of a given
@@ -231,9 +231,112 @@
     <p>The Ethiopic word separator, labeled "Ethiopic Wordspace" in the Unicode standard, is given special attention in this section as follows more
        complex rules of interaction with other punctuation as well as justification.  Ethiopic punctuation is often aligned with similar English
        punctuation though these associations must be understood as approximate.  Ethiopic fullstop and wordspace are highly regular in their application,
-       others, particularly ፣, ፤, and ፥ will be consistently used within a document but their roles may change between authors or institutes.  Addressing
-       puncutation semantics is beyond the scope of this document, however Ethiopic comma is given special attention in the following section.
+       others, particularly ፣, ፤, and ፥ will be consistently used within a document but their roles may change between authors or institutes.  A detailed
+       review of punctuation semantics is beyond the scope of this document, however Ethiopic comma is given special attention in the following section.
     </p>
+
+    <table>
+      <thead>
+        <tr>
+          <th>Symbol</th>
+          <th>Address</th>
+          <th>Names</th>
+          <th>Usage</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>፡</td>
+          <td>U+1361</td>
+          <td>Ge'ez: ንዑስ ነጥብ<br/>
+              Amharic: ሁለት ነጥብ<br/>
+              Tigrinya: ክልተ-ነጥቢ<br/>
+              English: Ethiopic Wordspace<br/>
+          </td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>፦</td>
+          <td>U+1366</td>
+          <td>Ge'ez: አስተአምሮ<br/>
+              Amharic: አስረጂ ሰረዝ<br/>
+              Tigrinya: <br/>
+              English: Ethiopic Preface Colon<br/>
+          </td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>፥</td>
+          <td>U+1365</td>
+          <td>Ge'ez: ንዑስ ሠረዝ<br/>
+              Amharic: ነጠላ ሰረዝ<br/>
+              Tigrinya: <br/>
+              English: Ethiopic Colon<br/>
+          </td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>፣</td>
+          <td>U+1363</td>
+          <td>Ge'ez: ነጠላ ሠረዝ<br/>
+              Amharic: ነጠላ ሰረዝ<br/>
+              Tigrinya: ንጽል-ጭሕጋር (ንጽል-ሰረዝ)<br/>
+              English: Ethiopic Comma<br/>
+          </td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>፤</td>
+          <td>U+1364</td>
+          <td>Ge'ez: ዐቢይ ሠረዝ<br/>
+              Amharic: ድርብ ሰረዝ<br/>
+              Tigrinya: ድርብ-ጭሕጋር<br/>
+              English: Ethiopic Semicolon<br/>
+          </td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>፧</td>
+          <td>U+1367</td>
+          <td>Ge'ez: ሠለስተ ነጥብ<br/>
+              Amharic: ሦስት ነጥብ<br/>
+              Tigrinya: ምልክት-ሕቶ (ትእምርተ-ሕቶ)<br/>
+              English: Ethiopic Question Mark<br/>
+          </td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>።</td>
+          <td>U+1362</td>
+          <td>Ge'ez: ዐቢይ ነጥብ<br/>
+              Amharic: አራት ነጥብ<br/>
+              Tigrinya: ኣርባዕተ-ነጥቢ<br/>
+              English: Ethiopic Fullstop<br/>
+          </td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>፠</td>
+          <td>U+1360</td>
+          <td>Ge'ez: <br/>
+              Amharic: <br/>
+              Tigrinya: <br/>
+              English: Ethiopic Section Mark<br/>
+          </td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>፨</td>
+          <td>U+1368</td>
+          <td>Ge'ez: <br/>
+              Amharic: <br/>
+              Tigrinya: <br/>
+              English: Seven Dot Section Mark<br/>
+          </td>
+          <td></td>
+        </tr>
+      </tbody>
+    </table>
   </section>
 
   <section id="ethiopic_comma_usage">
