removed some hyphens

--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
           <td>U+1363</td>
           <td>Ge'ez: ነጠላ ሠረዝ<br/>
               Amharic: ነጠላ ሰረዝ<br/>
-              Tigrinya: ንጽል-ጭሕጋር (ንጽል-ሰረዝ)<br/>
+              Tigrinya: ንጽል ጭሕጋር (ንጽል ሰረዝ)<br/>
               English: Ethiopic Comma<br/>
           </td>
           <td></td>
@@ -290,7 +290,7 @@
           <td>U+1364</td>
           <td>Ge'ez: ዐቢይ ሠረዝ<br/>
               Amharic: ድርብ ሰረዝ<br/>
-              Tigrinya: ድርብ-ጭሕጋር<br/>
+              Tigrinya: ድርብ ጭሕጋር<br/>
               English: Ethiopic Semicolon<br/>
           </td>
           <td></td>
@@ -300,7 +300,7 @@
           <td>U+1367</td>
           <td>Ge'ez: ሠለስተ ነጥብ<br/>
               Amharic: ሦስት ነጥብ<br/>
-              Tigrinya: ምልክት-ሕቶ (ትእምርተ-ሕቶ)<br/>
+              Tigrinya: ምልክት ሕቶ (ትእምርተ ሕቶ)<br/>
               English: Ethiopic Question Mark<br/>
           </td>
           <td></td>
@@ -310,7 +310,7 @@
           <td>U+1362</td>
           <td>Ge'ez: ዐቢይ ነጥብ<br/>
               Amharic: አራት ነጥብ<br/>
-              Tigrinya: ኣርባዕተ-ነጥቢ<br/>
+              Tigrinya: ኣርባዕተ ነጥቢ<br/>
               English: Ethiopic Fullstop<br/>
           </td>
           <td></td>
