Style update to the new punctuation table.  One name fix.

--- a/index.html
+++ b/index.html
@@ -246,94 +246,94 @@
       </thead>
       <tbody>
         <tr>
-          <td>፡</td>
+          <td style="text-align: center;">፡</td>
           <td>U+1361</td>
           <td>Ge'ez: ንዑስ ነጥብ<br/>
               Amharic: ሁለት ነጥብ<br/>
               Tigrinya: ክልተ-ነጥቢ<br/>
               English: Ethiopic Wordspace<br/>
           </td>
-          <td></td>
+          <td><em>TBD</em></td>
         </tr>
         <tr>
-          <td>፦</td>
+          <td style="text-align: center;">፦</td>
           <td>U+1366</td>
           <td>Ge'ez: አስተአምሮ<br/>
               Amharic: አስረጂ ሰረዝ<br/>
               Tigrinya: <br/>
               English: Ethiopic Preface Colon<br/>
           </td>
-          <td></td>
+          <td><em>TBD</em></td>
         </tr>
         <tr>
-          <td>፥</td>
+          <td style="text-align: center;">፥</td>
           <td>U+1365</td>
           <td>Ge'ez: ንዑስ ሠረዝ<br/>
               Amharic: ነጠላ ሰረዝ<br/>
               Tigrinya: <br/>
               English: Ethiopic Colon<br/>
           </td>
-          <td></td>
+          <td><em>TBD</em></td>
         </tr>
         <tr>
-          <td>፣</td>
+          <td style="text-align: center;">፣</td>
           <td>U+1363</td>
           <td>Ge'ez: ነጠላ ሠረዝ<br/>
               Amharic: ነጠላ ሰረዝ<br/>
               Tigrinya: ንጽል ጭሕጋር (ንጽል ሰረዝ)<br/>
               English: Ethiopic Comma<br/>
           </td>
-          <td></td>
+          <td><em>TBD</em></td>
         </tr>
         <tr>
-          <td>፤</td>
+          <td style="text-align: center;">፤</td>
           <td>U+1364</td>
           <td>Ge'ez: ዐቢይ ሠረዝ<br/>
               Amharic: ድርብ ሰረዝ<br/>
               Tigrinya: ድርብ ጭሕጋር<br/>
               English: Ethiopic Semicolon<br/>
           </td>
-          <td></td>
+          <td><em>TBD</em></td>
         </tr>
         <tr>
-          <td>፧</td>
+          <td style="text-align: center;">፧</td>
           <td>U+1367</td>
           <td>Ge'ez: ሠለስተ ነጥብ<br/>
               Amharic: ሦስት ነጥብ<br/>
               Tigrinya: ምልክት ሕቶ (ትእምርተ ሕቶ)<br/>
               English: Ethiopic Question Mark<br/>
           </td>
-          <td></td>
+          <td><em>TBD</em></td>
         </tr>
         <tr>
-          <td>።</td>
+          <td style="text-align: center;">።</td>
           <td>U+1362</td>
           <td>Ge'ez: ዐቢይ ነጥብ<br/>
               Amharic: አራት ነጥብ<br/>
               Tigrinya: ኣርባዕተ ነጥቢ<br/>
               English: Ethiopic Fullstop<br/>
           </td>
-          <td></td>
+          <td><em>TBD</em></td>
         </tr>
         <tr>
-          <td>፠</td>
+          <td style="text-align: center;">፠</td>
           <td>U+1360</td>
           <td>Ge'ez: <br/>
               Amharic: <br/>
               Tigrinya: <br/>
               English: Ethiopic Section Mark<br/>
           </td>
-          <td></td>
+          <td><em>TBD</em></td>
         </tr>
         <tr>
-          <td>፨</td>
+          <td style="text-align: center;">፨</td>
           <td>U+1368</td>
           <td>Ge'ez: <br/>
               Amharic: <br/>
               Tigrinya: <br/>
-              English: Seven Dot Section Mark<br/>
+              English: Ethiopic Paragraph Separator<br/><span style="color: #ffffff">English: </span>Ethiopic Seven Dot Section Mark
           </td>
-          <td></td>
+          <td><em>TBD</em></td>
         </tr>
       </tbody>
     </table>
