Integration of the review of foreign symbols used in Ethiopic moved from Ethiopicized section into Punctuation Used in Ethiopic section.

--- a/index.html
+++ b/index.html
@@ -222,18 +222,12 @@
        applied to any punctuation and in several different styles.  However, the bi-chromatic forms do not change the syntactic role of a given
        punctuation.  In the Modern era, a third of the punctuation marks: ፧, ፨, and ፠ have largely fallen into disuse while a number of punctuation
        marks from Western practices have been adopted. Bi-chromatic punctuation is reserved for spiritual materials and remains a calligraphic practice.</p>
-    <p>Ethiopic punctuation segments text and is non-encompassing. Adopted into Ethiopic writing practices are encompassing punctuation such as 
-       parenthesis, brackets, single and double quotation marks and guillemets.  Expressive punctuation such as question mark, exclaimation point,
-       inverted exclaimation mark, and ellipsis are also incorporated into Ethiopic practices. Inverted exclaimation mark is repurposed and utilized
-       differently than in its Western usage.  In Ethiopic writing the inverted exclaimation mark is known as "Timherte Slaq" appears at the end of
-       a sentence and will denote sarcasm. All borrowed punctuation is subject to typeface alignment with Ethiopic weights and shapes, an aesthetic
-       enhancement discussed in this section as <a href="#ethiopicized_punctuation">"Ethiopicized Punctuation"</a>.</p>
-    <p>The Ethiopic word separator, labeled "Ethiopic Wordspace" in the Unicode standard, is given special attention in this section as follows more
+    <p>Ethiopic punctuation segments text and is non-encompassing. 
+       The Ethiopic word separator, labeled "Ethiopic Wordspace" in the Unicode standard, is given special attention in this section as follows more
        complex rules of interaction with other punctuation as well as justification.  Ethiopic punctuation is often aligned with similar English
        punctuation though these associations must be understood as approximate.  Ethiopic fullstop and wordspace are highly regular in their application,
        others, particularly ፣, ፤, and ፥ will be consistently used within a document but their roles may change between authors or institutes.  A detailed
-       review of punctuation semantics is beyond the scope of this document, however Ethiopic comma is given special attention in the following section.
-    </p>
+       review of punctuation semantics is beyond the scope of this document, however Ethiopic comma is given special attention in the following section.</p>
 
     <table>
       <thead>
@@ -337,6 +331,19 @@
         </tr>
       </tbody>
     </table>
+
+    <p>Adopted into Ethiopic writing practices are encompassing punctuation such as parenthesis, brackets, single and double quotation marks and guillemets.
+       Expressive punctuation such as question mark, exclaimation point, inverted exclaimation mark, and ellipsis are also incorporated into Ethiopic practices. 
+       Additional foreign symbols that denote currency, time, mathematics, or communicate with Internet protocols (e.g. "@" , "://") have also
+       been adopted as over the last century as international communication grew.</p>
+    <p>The ES-781:2002 standard identifies the following inventory of western symbols to be used with Ethiopic:</p>
+    <p style="margin-left: 20px"><code>1234567890 ? ! ¡ . / () [] {} &lt; = &gt; \ # % &amp; _ - + ± × ÷ ‘ ’  “ ” ‹ › « »</code></p>
+    <p>Additionally the following punctuation is observed to be used with Ethiopic writing:</p>
+    <p style="margin-left: 20px"><code>$ : , € @ …</code></p>
+    <p>Inverted exclaimation mark is repurposed and utilized differently than in its Western usage.
+       In Ethiopic writing the inverted exclaimation mark is known as "Timherte Slaq" appears at the end of
+       a sentence and will denote sarcasm. All borrowed punctuation is subject to typeface alignment with Ethiopic weights and shapes, an aesthetic
+       enhancement discussed in this section as <a href="#ethiopicized_punctuation">"Ethiopicized Punctuation"</a>.</p>
   </section>
 
   <section id="ethiopic_comma_usage">
@@ -407,13 +414,7 @@
 
     <section id="ethiopicized_punctuation">
       <h4>Ethiopicized Punctuation</h4>
-      <p>Modern Ethiopic borrows a number of foreign symbols to denote currency, express emphasis, time, mathematics, or communicate with
-         Internet protocols (e.g. "@" , "://"). 
-         The ES-781:2002 standard identifies the following inventory of western symbols to be used with Ethiopic:</p>
-      <p style="margin-left: 20px"><code>1234567890 ? ! ¡ . / () [] {} &lt; = &gt; \ # % &amp; _ - + ± × ÷ ‘ ’  “ ” ‹ › « »</code></p>
-      <p>Additionally the following punctuation is observed to be used with Ethiopic writing:</p>
-      <p style="margin-left: 20px"><code>$ : , € @ …</code></p>
-      <p>The shape and weight of these symbols are often changed for a better visual fit with an accompanying
+      <p>The shape and weight of adopted symbols are often changed for a better visual fit with an accompanying
          Ethiopic typeface. Enhanced foreign symbols are referred to here as <a href="#term.ethiopicized" class="termref">“Ethiopicized”</a>. While many symbols are borrowed from western writing,
          not all necessarily benefit from Ethiopicization.  Those that do will primarily be used in a context where the foreign symbol directly
          abuts some Ethiopic symbol. Common Ethiopic symbols are demonstrated in the following figure:</p>
