"reserved" => "now reserved" to clarify bi-chromatic use in the modern era.

--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
        The Classical Ethiopic punctuation inventory may <em>appear</em> to be larger in number as a result of bi-chromatic rendering which can be
        applied to any punctuation and in several different styles.  However, the bi-chromatic forms do not change the syntactic role of a given
        punctuation.  In the Modern era, a third of the punctuation marks: ፧, ፨, and ፠ have largely fallen into disuse while a number of punctuation
-       marks from Western practices have been adopted. Bi-chromatic punctuation is reserved for spiritual materials and remains a calligraphic practice.</p>
+       marks from Western practices have been adopted. Bi-chromatic punctuation is now reserved for spiritual materials and remains a calligraphic practice.</p>
     <p>Ethiopic punctuation segments text and is non-encompassing. 
        The Ethiopic word separator, labeled "Ethiopic Wordspace" in the Unicode standard, is given special attention in this section as follows more
        complex rules of interaction with other punctuation as well as justification.  Ethiopic punctuation is often aligned with similar English
